@@ -7607,22 +7607,27 @@ namespace Chummer
         {
             try
             {
+                if (!(await treVehicles.DoThreadSafeFuncAsync(x => x.SelectedNode?.Tag, GenericToken)
+                                       .ConfigureAwait(false) is IHasInternalId
+                        selectedObject))
+                    return;
+                string strSelectedId = selectedObject.InternalId;
                 // Make sure that a Weapon Mount has been selected.
                 // Attempt to locate the selected VehicleMod.
-                WeaponMount objWeaponMount = null;
                 VehicleMod objMod = null;
-                switch (await treVehicles.DoThreadSafeFuncAsync(x => x.SelectedNode?.Tag, GenericToken)
-                                         .ConfigureAwait(false))
+                WeaponMount objWeaponMount = null;
+                if (!string.IsNullOrEmpty(strSelectedId))
                 {
-                    case WeaponMount objSelectedMount:
-                        objWeaponMount = objSelectedMount;
-                        break;
-
-                    case VehicleMod objSelectedMod
-                        when objSelectedMod.Name.StartsWith("Mechanical Arm", StringComparison.Ordinal)
-                             || objSelectedMod.Name.Contains("Drone Arm"):
-                        objMod = objSelectedMod;
-                        break;
+                    (objWeaponMount, _) = await CharacterObject.Vehicles.FindVehicleWeaponMountAsync(strSelectedId, GenericToken).ConfigureAwait(false);
+                    if (objWeaponMount == null)
+                    {
+                        (objMod, _, objWeaponMount) = await CharacterObject.Vehicles.FindVehicleModAsync(x => x.InternalId == strSelectedId, GenericToken).ConfigureAwait(false);
+                        if (objMod?.Name.StartsWith("Mechanical Arm", StringComparison.Ordinal) == false
+                            && !objMod.Name.Contains("Drone Arm"))
+                        {
+                            objMod = null;
+                        }
+                    }
                 }
 
                 if (objWeaponMount == null && objMod == null)
@@ -7631,7 +7636,7 @@ namespace Chummer
                         this, await LanguageManager.GetStringAsync("Message_CannotAddWeapon", token: GenericToken).ConfigureAwait(false),
                         await LanguageManager.GetStringAsync("MessageTitle_CannotAddWeapon", token: GenericToken).ConfigureAwait(false),
                         MessageBoxButtons.OK,
-                        MessageBoxIcon.Information, token: GenericToken).ConfigureAwait(false);
+                        MessageBoxIcon.Information).ConfigureAwait(false);
                     return;
                 }
 
@@ -7641,100 +7646,88 @@ namespace Chummer
                         this, await LanguageManager.GetStringAsync("Message_WeaponMountFull", token: GenericToken).ConfigureAwait(false),
                         await LanguageManager.GetStringAsync("MessageTitle_CannotAddWeapon", token: GenericToken).ConfigureAwait(false),
                         MessageBoxButtons.OK,
-                        MessageBoxIcon.Information, token: GenericToken).ConfigureAwait(false);
+                        MessageBoxIcon.Information).ConfigureAwait(false);
                     return;
                 }
 
-                XmlDocument objXmlDocument = await CharacterObject.LoadDataAsync("weapons.xml", token: GenericToken).ConfigureAwait(false);
-
-                CursorWait objCursorWait = await CursorWait.NewAsync(this, token: GenericToken).ConfigureAwait(false);
-                try
+                bool blnAddAgain;
+                do
                 {
-                    bool blnAddAgain;
-                    do
-                    {
-                        IAsyncDisposable objLocker = await CharacterObject.LockObject.EnterUpgradeableReadLockAsync(GenericToken).ConfigureAwait(false);
-                        try
-                        {
-                            GenericToken.ThrowIfCancellationRequested();
-                            using (ThreadSafeForm<SelectWeapon> frmPickWeapon = await ThreadSafeForm<SelectWeapon>
-                                       .GetAsync(
-                                           () => new SelectWeapon(CharacterObject)
-                                           {
-                                               LimitToCategories = objMod != null
-                                                   ? objMod.WeaponMountCategories
-                                                   : objWeaponMount?.AllowedWeaponCategories ?? string.Empty
-                                           }, GenericToken).ConfigureAwait(false))
-                            {
-                                if (await frmPickWeapon.ShowDialogSafeAsync(this, GenericToken).ConfigureAwait(false)
-                                    == DialogResult.Cancel)
-                                    return;
-
-                                // Open the Weapons XML file and locate the selected piece.
-                                XmlNode objXmlWeapon = objXmlDocument.TryGetNodeByNameOrId("/chummer/weapons/weapon",
-                                    frmPickWeapon.MyForm.SelectedWeapon);
-
-                                List<Weapon> lstWeapons = new List<Weapon>(1);
-                                Weapon objWeapon = new Weapon(CharacterObject);
-                                try
-                                {
-                                    if (objMod != null)
-                                        await objWeapon.SetParentVehicleModAsync(objMod, GenericToken)
-                                            .ConfigureAwait(false);
-                                    else
-                                        await objWeapon.SetParentMountAsync(objWeaponMount, GenericToken)
-                                            .ConfigureAwait(false);
-                                    await objWeapon.CreateAsync(objXmlWeapon, lstWeapons, token: GenericToken)
-                                        .ConfigureAwait(false);
-                                    objWeapon.DiscountCost = frmPickWeapon.MyForm.BlackMarketDiscount;
-
-                                    if (frmPickWeapon.MyForm.FreeCost)
-                                    {
-                                        objWeapon.Cost = "0";
-                                    }
-
-                                    if (objMod != null)
-                                        await objMod.Weapons.AddAsync(objWeapon, GenericToken).ConfigureAwait(false);
-                                    else
-                                        await objWeaponMount.Weapons.AddAsync(objWeapon, GenericToken)
-                                            .ConfigureAwait(false);
-
-                                    foreach (Weapon objLoopWeapon in lstWeapons)
-                                    {
-                                        if (objMod == null)
-                                            await objWeaponMount.Weapons.AddAsync(objLoopWeapon, GenericToken)
-                                                .ConfigureAwait(false);
-                                        else
-                                            await objMod.Weapons.AddAsync(objLoopWeapon, GenericToken)
-                                                .ConfigureAwait(false);
-                                    }
-
-                                    blnAddAgain = frmPickWeapon.MyForm.AddAgain
-                                                  && (objMod != null || !objWeaponMount.IsWeaponsFull);
-                                }
-                                catch
-                                {
-                                    foreach (Weapon objLoopWeapon in lstWeapons)
-                                        await objLoopWeapon.DeleteWeaponAsync(token: CancellationToken.None).ConfigureAwait(false);
-                                    await objWeapon.DeleteWeaponAsync(token: CancellationToken.None).ConfigureAwait(false);
-                                    throw;
-                                }
-                            }
-                        }
-                        finally
-                        {
-                            await objLocker.DisposeAsync().ConfigureAwait(false);
-                        }
-                    } while (blnAddAgain);
-                }
-                finally
-                {
-                    await objCursorWait.DisposeAsync().ConfigureAwait(false);
-                }
+                    blnAddAgain = await AddWeaponToWeaponMount(objWeaponMount, objMod, GenericToken)
+                        .ConfigureAwait(false);
+                } while (blnAddAgain);
             }
             catch (OperationCanceledException)
             {
                 //swallow this
+            }
+        }
+
+        private async Task<bool> AddWeaponToWeaponMount(WeaponMount objWeaponMount, VehicleMod objMod, CancellationToken token = default)
+        {
+            IAsyncDisposable objLocker = await CharacterObject.LockObject.EnterUpgradeableReadLockAsync(token).ConfigureAwait(false);
+            try
+            {
+                token.ThrowIfCancellationRequested();
+                using (ThreadSafeForm<SelectWeapon> frmPickWeapon = await ThreadSafeForm<SelectWeapon>.GetAsync(
+                           () => new SelectWeapon(CharacterObject)
+                           {
+                               LimitToCategories = objMod == null
+                                   ? objWeaponMount.AllowedWeaponCategories
+                                   : objMod.WeaponMountCategories,
+                               WeaponFilter = objMod == null
+                                   ? objWeaponMount.WeaponFilter
+                                   : string.Empty
+                           }, token).ConfigureAwait(false))
+                {
+                    if (await frmPickWeapon.ShowDialogSafeAsync(this, token).ConfigureAwait(false) ==
+                        DialogResult.Cancel)
+                        return false;
+
+                    // Open the Weapons XML file and locate the selected piece.
+                    XmlDocument objXmlDocument
+                        = await CharacterObject.LoadDataAsync("weapons.xml", token: token).ConfigureAwait(false);
+
+                    XmlNode objXmlWeapon = objXmlDocument.TryGetNodeByNameOrId("/chummer/weapons/weapon",
+                        frmPickWeapon.MyForm.SelectedWeapon);
+
+                    List<Weapon> lstWeapons = new List<Weapon>(1);
+                    Weapon objWeapon = new Weapon(CharacterObject);
+                    try
+                    {
+                        if (objMod != null)
+                            await objWeapon.SetParentVehicleModAsync(objMod, GenericToken).ConfigureAwait(false);
+                        else
+                            await objWeapon.SetParentMountAsync(objWeaponMount, GenericToken).ConfigureAwait(false);
+                        await objWeapon.CreateAsync(objXmlWeapon, lstWeapons, token: token).ConfigureAwait(false);
+
+                        if (objMod != null)
+                            await objMod.Weapons.AddAsync(objWeapon, token).ConfigureAwait(false);
+                        else
+                            await objWeaponMount.Weapons.AddAsync(objWeapon, token).ConfigureAwait(false);
+
+                        foreach (Weapon objLoopWeapon in lstWeapons)
+                        {
+                            if (objMod != null)
+                                await objMod.Weapons.AddAsync(objLoopWeapon, token).ConfigureAwait(false);
+                            else
+                                await objWeaponMount.Weapons.AddAsync(objLoopWeapon, token).ConfigureAwait(false);
+                        }
+
+                        return frmPickWeapon.MyForm.AddAgain && (objMod != null || !objWeaponMount.IsWeaponsFull);
+                    }
+                    catch
+                    {
+                        foreach (Weapon objLoopWeapon in lstWeapons)
+                            await objLoopWeapon.DeleteWeaponAsync(token: CancellationToken.None).ConfigureAwait(false);
+                        await objWeapon.DeleteWeaponAsync(token: CancellationToken.None).ConfigureAwait(false);
+                        throw;
+                    }
+                }
+            }
+            finally
+            {
+                await objLocker.DisposeAsync().ConfigureAwait(false);
             }
         }
 
